# misskey-discord-webhook-proxy

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: publish.yml
src/: main.rs
