[package]
name = "misskey-discord-webhook-proxy"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.185", features = ["derive"] }
serde_json = "1.0.105"
